fix: refactor Locker's Database Adapter module to accommodate multiple serializers
Project:
- Refactor Locker's Adapter Module to accommodate multiple serializers.
- Implement the java serializer with spring profile "java-serializer".
- Set "java-serializer" as an active profile in app's pom.
- Refactor Locker class.